--- a/_posts/2019-04-13-nodles.md
+++ b/_posts/2019-04-13-nodles.md
@@ -5,8 +5,8 @@ date: 2019-04-13 20:00:00
 tags: fiction
 ---
 
-公司食堂2楼有一排清真馆，其中有一家兰州拉面，我常去。
+公司食堂二楼有一排清真馆，其中有一家兰州拉面，我常去。
 
 拿了餐盘，沿着餐线，首先是小菜，有荤有素。红油拌的菜叶，色泽翠绿；凉拌的白萝卜，清脆爽口；清卤的牛肉，切成薄片，放在小碟上。小菜都摆放整齐，放在一个小架子上。透过架子，可以看到，一个回族女孩，一身黑衣，头裹黑纱，在架子后面忙碌地切菜、摆盘。
 
-选好小菜，开始选拉面。餐线的架子上挂着一溜牌子，根据面的粗细，按序写着：窝细、毛细、细面、三细、二细、韭叶、薄宽、大宽。盛面的是一个回族小伙，头戴一顶白色圆顶无檐的小圆帽，回族人称其为：礼拜帽，上面用紫色棉线，勾出一些条纹花边。
+选好小菜，开始选拉面。餐线的架子上挂着一溜牌子，根据面的粗细，按序写着：窝细、毛细、细面、三细、二细、韭叶、薄宽、大宽。盛面的是一个回族小伙，头戴一顶白色圆顶无檐的小圆帽，回族人称其为：礼拜帽，上面用紫色棉线，勾出一些条纹花边。“细面？要不要辣子？”回族小伙热情地招呼道。
