Finished the new fiction, nodles

--- a/_posts/2019-04-13-nodles.md
+++ b/_posts/2019-04-13-nodles.md
@@ -7,6 +7,14 @@ tags: fiction
 
 公司食堂二楼有一排清真馆，其中有一家兰州拉面，我常去。
 
-拿了餐盘，沿着餐线，首先是小菜，有荤有素。红油拌的菜叶，色泽翠绿；凉拌的白萝卜，清脆爽口；清卤的牛肉，切成薄片，放在小碟上。小菜都摆放整齐，放在一个小架子上。透过架子，可以看到，一个回族女孩，一身黑衣，头裹黑纱，在架子后面忙碌地切菜、摆盘。
+拿了餐盘，沿着餐线，首先是小菜，有荤有素。红油拌的菜叶，色泽翠绿；凉拌的白萝卜，清脆爽口；清卤的牛肉，切成薄片，盛放在小碟上。小菜都摆放整齐，放在一个小架子上。透过架子，可以看到一个回族女孩，一身黑衣，头裹黑纱，在架子后面忙碌地切菜、摆盘。
 
-选好小菜，开始选拉面。餐线的架子上挂着一溜牌子，根据面的粗细，按序写着：窝细、毛细、细面、三细、二细、韭叶、薄宽、大宽。盛面的是一个回族小伙，头戴一顶白色圆顶无檐的小圆帽，回族人称其为：礼拜帽，上面用紫色棉线，勾出一些条纹花边。“细面？要不要辣子？”回族小伙热情地招呼道。
+选好小菜，开始选拉面。餐线的架子上挂着一溜木牌子，根据面的粗细，按序写着：窝细、毛细、细面、三细、二细、韭叶、薄宽、大宽。盛面的是一个回族小伙，头戴一顶无檐的白色小圆帽，回族人称其为：礼拜帽，上面用紫色棉线，勾出一些条纹花边。“细面？要不要辣子？”回族小伙热情地招呼道。盛了面后，会经过一个小碗，里面放了许多掰成一瓣一瓣的蒜。吃着拉面，啃着生蒜，别有一翻风味。
+
+正要找个地方坐下，看到同事小周，便跟她坐到一块。小周北方人，也爱吃拉面。一边吃着，一边闲聊。小周快吃完了，正在剥蒜。
+
+我说，“蒜虽好吃，吃完后，也不少困扰，一下午不敢近人说话。对了，小周，你是怎么解决这个问题的？”
+
+小周头也不抬，“那是别人的问题，我从不因此困扰。” 说着，非常娴熟地剥好两瓣，丢到嘴里，像吃炒豆子似的，嘎嘣...嘎嘣...见我在看她，冲我一乐，还打了个嗝，“呃....” 那嗝声音响亮绵长，气味相当带劲，果然是今年的新蒜。
+
+小周拿着餐盘，起身离去。我还愣在那个嗝中，望着她飘然而去的身影，心中暗挑大指，“果然女中豪杰啊。”
